# agentome

./: .gitignore  LICENSE  README.md  genome.db  pyproject.toml
agentome/: __init__.py  context_packet.py
