[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentome"
version = "0.3.0b5"
description = "Genome-based context compression for AI agents — thin wrapper around Helix Context"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Michael Bachaud", email = "swiftwing21@users.noreply.github.com" },
]
keywords = ["agentome", "llm", "context", "compression", "genome", "helix", "rag", "ribosome"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "helix-context>=0.3.0b5",
]

[project.urls]
Homepage = "https://github.com/SwiftWing21/agentome"
Repository = "https://github.com/SwiftWing21/agentome"
Paper = "https://mbachaud.substack.com/p/agentome"
"Helix Context" = "https://github.com/SwiftWing21/helix-context"

[project.scripts]
agentome = "helix_context.server:main"
